--- a/src/components/Loading/Loading.module.css
+++ b/src/components/Loading/Loading.module.css
@@ -3,4 +3,9 @@
   font-size: 24px;
   left: 50%;
   top: 50%;
+  z-index: 99;
+  padding: 30px;
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 15px;
+  color: white;
 }
