--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,9 @@ body {
   max-width: 1180px;
   margin: 0 auto;
 }
+
+@media screen and (max-width: 1200px) {
+  body {
+    padding: 0 20px;
+  }
+}
