--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -20,3 +20,9 @@
 .redirect p {
   font-size: 14px;
 }
+
+@media screen and (max-width: 480px) {
+  .register {
+    justify-content: inherit;
+  }
+}
